force-app/main/default/objects/Business__c/fields/BusinessID__c.field-meta.xml
<CustomField>
    <fullName>BusinessID__c</fullName>
    <description>This is the custom object named &quot;Business Unit Name&quot;</description>
    <label>Business ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>