force-app/main/default/objects/Business__c/fields/BusinessUnitAlias__c.field-meta.xml
<CustomField>
    <fullName>BusinessUnitAlias__c</fullName>
    <label>Business Alias</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CargillBusinessAlias</valueSetName>
    </valueSet>
</CustomField>