force-app/main/default/objects/Business__c/fields/CargillEnterprise__c.field-meta.xml
<CustomField>
    <fullName>CargillEnterprise__c</fullName>
    <label>Cargill Enterprise</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cargill_Enterprise</valueSetName>
    </valueSet>
</CustomField>