force-app/main/default/objects/Business__c/fields/CargillGroup__c.field-meta.xml
<CustomField>
    <fullName>CargillGroup__c</fullName>
    <label>Cargill Group</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cargill_Group</valueSetName>
    </valueSet>
</CustomField>