force-app/main/default/objects/Business__c/fields/LegacyRecordID__c.field-meta.xml
<CustomField>
    <fullName>LegacyRecordID__c</fullName>
    <label>Legacy Record ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>