force-app/main/default/objects/Business__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BusinessUnitAlias__c</columns>
    <columns>CargillEnterprise__c</columns>
    <columns>CargillGroup__c</columns>
    <columns>BusinessID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>